--- a/developer.html
+++ b/developer.html
@@ -1,9 +1,14 @@
 <!-- مائل ولونه أحمر p قم بجعل النص داخل وسم -->
 
 <!-- class مرة باستخدام -->
-<p>رائع CSS و HTML أنا مطور</p>
+<style>
+.web{
+    color: rgb(236, 15, 15);
+}
+</style>
+<i><p class="web">رائع CSS و HTML أنا مطور</p></i>
 
 <!-- ومرة باستخدام الوسم نفسه -->
-<p>رائع CSS و HTML أنا مطور</p>
+<i><p style="color: rgb(248, 9, 57);">رائع CSS و HTML أنا مطور</p></i>
 
 <!-- أحياناً رغم أننا يمكننا التعديل على الوسم مباشرة؟ classهل ترى أهمية استخدام ال -->
